# chess_project

./: CMakeLists.txt  README.md  build_output.txt  build_x64.bat  convert_glb.py
assets/models/spectator/source/: material.mtl
assets/models/spectator_model/: clean_mii.glb  mii_model.glb  pikmin.glb
assets/shaders/: board_square.frag  board_square.vert
include/: AssetManager.hpp  Camera.hpp  ChessEngine.hpp  Mesh.hpp  Model.hpp  ParticleSystem.hpp  Piece.hpp  RandomGen.hpp  Renderer3D.hpp  Shader.hpp  Skybox.hpp
src/: AssetManager.cpp  Camera.cpp  ChessEngine.cpp  Mesh.cpp  Model.cpp  ParticleSystem.cpp  RandomGen.cpp  Renderer3D.cpp  Shader.cpp  Skybox.cpp  main.cpp
